--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "concurrently": "^5.0.0",
+    "cron": "^1.7.2",
     "express": "^4.17.1",
     "mongoose": "^5.7.14",
     "nodemon": "^2.0.1"
